@@ -3,6 +3,12 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2008/01/10
+	* Corrected @slaveclone/@clone behaving as @evilclone when you change the @
+	  symbol.
+	* Modified SC_ARMOR_ELEMENT so it grants elemental resist as if it they
+	  were card granted bonuses.
+	* fixed a SA_DISPELL crash when casted on an object with no status changes.
 2008/01/09
 	* Script command warpportal now places a warp in its initial state (as if a
 	  real warp portal was casted).
