@@ -193,9 +193,6 @@ skill_removetrap_type: 0
 // Does using bow to do a backstab give a 50% damage penalty? (Note 1)
 backstab_bow_penalty: yes
 
-// Use kRO new steal formula? (favors skillv more than dex difference) (Note 1)
-skill_steal_type: yes
-
 // How many times you could try to steal from a mob.
 // Note: It helps to avoid stealing exploit on monsters with few rare items
 // Use 0 to disable (max allowed value is 255)
